--- a/shelter/assets/scss/components/_link.scss
+++ b/shelter/assets/scss/components/_link.scss
@@ -1,7 +1,7 @@
 .link {
   height: 27px;
   color: var(--color-dark-s);
-  line-height: 1.6;
+  line-height: 24px;
   transition: color 0.2s ease-in;
 
   .pets-page & {
