--- a/shelter/assets/scss/components/_title.scss
+++ b/shelter/assets/scss/components/_title.scss
@@ -11,6 +11,6 @@
   font-weight: 400;
   font-size: 35px;
   font-family: $font-title;
-  line-height: 1.3;
+  line-height: 45px;
   letter-spacing: 0.06em;
 }
